<resources>
    <string name="app_name">Letter Vault</string>
    <string name="settings_activity_name">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_list">Show List</string>
    <string name="action_add_letter">Add Letter</string>
    <string name="action_delete">Delete</string>

    <!-- Created Fev 14, 10:00 AM -->
    <string name="created_title">Created %1$s</string>
    <string name="subject">Subject</string>
    <string name="add_a_message">Add a Message</string>
    <string name="time">Time</string>
    <string name="title_opened">Opened:\n%1$s</string>
    <string name="title_opening">Opening: %1$s</string>
    <string name="letter_opening">Letter opening at:\n%1$s</string>
    <string name="letter_ready">Ready to open</string>
    <string name="share">Share</string>
    <string name="recent_letter">Recent Letter</string>
    <string name="no_letter">Letter not found.</string>
    <string name="cannot_save_message">Can not save letter with empty message.</string>
    <string name="lock_icon_image">Letter lock icon image</string>

    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder vault is ready to be opened.</string>
    <string name="notify_channel_name">Open letter</string>
    <string name="notify_channel_description">Get notification when the letter can be opened.</string>
    <string name="notify_title">Open a letter</string>
    <string name="notify_content">Vault is ready to open a secret letter.</string>
    <string name="pref_key_night" translatable="false">key_night_mode</string>
    <string name="pref_night_title">Night mode</string>
    <string name="pref_night_summary">Select a dark or light theme.</string>
    <string name="pref_night_dialog">Set Night mode</string>
    <string name="pref_night_auto" translatable="false">auto</string>
    <string name="pref_night_on" translatable="false">on</string>
    <string name="pref_night_off" translatable="false">off</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="night_mode_on">Night mode</string>
    <string name="night_mode_off">Day mode</string>
    <string name="share_locked">Secret letter, but you have to wait…</string>
    <string name="cannot_open">The vault cannot be opened until %1$s</string>
    <string name="alert_delete_message">Delete letter?</string>
    <string name="alert_delete_negative">Cancel</string>
    <string name="alert_delete_positive">Delete</string>
    <string name="menu_future">Future</string>
    <string name="menu_all">All</string>
    <string name="menu_opened">Opened</string>
    <string name="add_message">Add Message</string>
    <string name="message">Message</string>
    <string name="lock_the_message">lock the message</string>
    <string name="letter_state">Letter State</string>
    <string name="close_button">Close Button</string>

</resources>
